--- a/about.html
+++ b/about.html
@@ -98,19 +98,19 @@
           	<div class="col-md-10">
           		<div class="profile ftco-animate">
 	          		<h2 class="mb-4">Profile</h2>
-	          		<h4 class="mb-4">I'm a UI/UX Designer &amp; Frontend Developer from London, UK. I aim to make a difference through my creative solution.</h4>
-	          		<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+	          		<h4 class="mb-4">I'm a Software Engineer based in San Francisco, CA. I aim to make a difference through my creative solutions.</h4>
+	          		<p>I love learning about new technologies and challenging myself to think logically, methodically, and creatively. When building an idea, a user's experience is very important to me, so I strive to craft an interface that is innovative, visually appealing, and intuitive for everyone.</p>
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
 		          			<p><strong>Name:</strong> <span>Elson Li</span></p>
 		          			<!-- <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p> -->
 		          			<p><strong>Phone:</strong> <span>(415)-203-6973</span></p>
 		          		</div>
-		          		<div class="col-md-6">
-		          			<p><strong>Name:</strong> <span>Elson Li</span></p>
+		          		<!-- <div class="col-md-6"> -->
+		          			<!-- <p><strong>Name:</strong> <span>Elson Li</span></p> -->
 		          			<!-- <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p> -->
-		          			<p><strong>Phone:</strong> <span>(415)-203-6973</span></p>
-		          		</div>
+		          			<!-- <p><strong>Phone:</strong> <span>(415)-203-6973</span></p> -->
+		          		<!-- </div> -->
 	          		</div>
           		</div>
 
