--- a/about.html
+++ b/about.html
@@ -118,41 +118,31 @@
           			<h2 class="mb-4">Experience</h2>
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>UX &amp; Interaction Designer <span> - Google Company</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Computer Science Academic Intern <span> - University of California, Berkeley</span> </h4>
+	          				<p class="location">Berkeley - California</p>
           				</div>
           				<div class="year">
-          					<p>2017 - Present</p>
+          					<p>2017 - 2018</p>
           				</div>
           			</div>
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>UX &amp; UI Designer <span> - QBootstrap.com</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Assistant Program Coordinator<span> - Ulloa Elementary School</span> </h4>
+	          				<p class="location">San Francisco - California</p>
           				</div>
           				<div class="year">
-          					<p>2015 - 2017</p>
+          					<p>2008 - 2015</p>
           				</div>
           			</div>
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Designer &amp; Developer <span> - Themeforest.net</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Credit Recovery Assistant Program Coordinator <span> - Balboa High School</span> </h4>
+	          				<p class="location">San Francisco - California</p>
           				</div>
           				<div class="year">
-          					<p>2014 - 2015</p>
-          				</div>
-          			</div>
-
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h4>Front-End Developer <span> - Big Comany</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
-          				</div>
-          				<div class="year">
-          					<p>2012 - 2014</p>
+          					<p>2014</p>
           				</div>
           			</div>
           		</div>
