--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Elson Li</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/author-1.jpg);"></span>Elson Li</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -73,14 +73,15 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex my-5" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+            <div class="col-md-4 author-img" style="background-image: url(images/person_1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Elson Li</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
+                  <p>I am a software engineer with a passion for Ruby on Rails, React, and Redux. With a creative side to me that I have
+                  always enjoyed exploring, I'm happy that I am able to do that with software development.</p>
                   <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
