--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Elson Li</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
+                  <p>I am a software engineer with a passion for Ruby on Rails, React, and Redux. With a creative side to me that I have
+                  always enjoyed exploring, I'm happy that I am able to do that with software development.</p>
                   <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
