--- a/about.html
+++ b/about.html
@@ -120,7 +120,11 @@
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Computer Science Academic Intern <span> - University of California, Berkeley</span> </h4>
-	          				<p class="location">Berkeley - California</p>
+                    <p class="location">Berkeley - California</p>
+                    <br/>
+                    <p>- Facilitated the learning of 90-100 students through assignments and projects to internalize core concepts</p>
+                    <p>- Identified individual weaknesses and tailored teaching methods specific to each student</p>
+                    <p>- Wrote and shared assignment walkthroughs with students and other academic interns</p>
           				</div>
           				<div class="year">
           					<p>2017 - 2018</p>
@@ -130,7 +134,10 @@
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Assistant Program Coordinator<span> - Ulloa Elementary School</span> </h4>
-	          				<p class="location">San Francisco - California</p>
+                    <p class="location">San Francisco - California</p>
+                    <br/>
+                    <p>- Assisted staff with supervising 100+ students and coordinating school-wide events to spark new interests</p>
+                    <p>- Used time management skills to reorganize schedules, resulting in >80% event satisfaction based on surveys</p>
           				</div>
           				<div class="year">
           					<p>2008 - 2015</p>
@@ -140,7 +147,10 @@
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Credit Recovery Assistant Program Coordinator <span> - Balboa High School</span> </h4>
-	          				<p class="location">San Francisco - California</p>
+                    <p class="location">San Francisco - California</p>
+                    <br/>
+                    <p>- Assisted the program coordinator by managing and inputting data in student records to ensure everyone was able to
+                    receive their A-G credits for graduation.</p>
           				</div>
           				<div class="year">
           					<p>2014</p>
@@ -153,41 +163,36 @@
           			<h2 class="mb-4">Education</h2>
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Master Degree in Computer Science<span> - Harvard University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Software Engineering Track<span> - App Academy</span> </h4>
+                    <p class="location">San Francisco - California</p>
+                    <br/>
+                    <p>- Full stack immersive web development course. Studied Ruby on Rails, Javascript, React, Redux, jQuery, HTML/CSS, SQL,
+                    TDD, OOP, design patterns and agile development.</p>
           				</div>
           				<div class="year">
-          					<p>2013 - 2014</p>
+          					<p>2019 - 2020</p>
           				</div>
           			</div>
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Bacheclor of Science in Computer Science<span> - Harvard University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Bachelor of Arts in Cognitive Science<span> - University of California, Berkeley</span> </h4>
+                    <p class="location">Berkeley - California</p>
+                    <br/>
+                    <p>Relevant Coursework :</p>
+                    <p>- The Beauty and Joy of Computing, CS 10</p>
+                    <p>- The Structure and Interpretation of Computer Programs, CS 61A</p>
+                    <p>- Data Structures and Programming Methodology, CS 61B</p>
+                    <p>- Discrete Mathematics and Probability Theory, CS 70</p>
+                    <p>- Designing Information Devices and Systems I, EE 16A</p>
+                    <p>- Great Ideas of Computer Architectures (Machine Structures), CS 61C</p>
+                    <p>- Principles and Techniques of Data Science, DATA 100</p>
+                    <p>- Introduction to Artificial Intelligence, CS 188</p>
+                    <p>- Efficient Algorithms and Intractable Problems, CS 170</p>
+                    <p>- Computational Models of Cognition, COGSCI 131</p>
           				</div>
           				<div class="year">
-          					<p>2009 - 2012</p>
-          				</div>
-          			</div>
-
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h4>Diploma in Information Technology<span> - Oxford University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
-          				</div>
-          				<div class="year">
-          					<p>2008 - 2010</p>
-          				</div>
-          			</div>
-
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h4>Front-End Developer <span> - Big Comany</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
-          				</div>
-          				<div class="year">
-          					<p>2012 - 2014</p>
+          					<p>2015 - 2019</p>
           				</div>
           			</div>
           		</div>
@@ -196,73 +201,128 @@
           <div class="row mt-5 flex-column ftco-animate">
           	<div class="col-md-8">
           		<h2 class="mb-4">My Skills</h2>
-          	</div>
-          	<div class="col-md-6 animate-box">
-								<div class="progress-wrap">
-									<h4>Photoshop</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-									    <span>75%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h4>jQuery</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-									    <span>60%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap">
-									<h4>HTML5</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-									    <span>85%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h4>CSS3</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									    <span>90%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap">
-									<h4>WordPress</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-									    <span>70%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h4>SEO</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-									    <span>80%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
+            </div>
+            
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>React.js</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:90%">
+                    <span>90%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>Redux.js</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:90%">
+                    <span>90%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>Ruby on Rails</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:90%">
+                    <span>90%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>HTML5</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:80%">
+                    <span>80%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>CSS3</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:85%">
+                    <span>85%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>JavaScript</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:90%">
+                    <span>90%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>Ruby</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:90%">
+                    <span>90%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>Python</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:85%">
+                    <span>85%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>Java</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:85%">
+                    <span>85%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>C</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                    style="width:75%">
+                    <span>75%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
