Remove unnecessary section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
-                <li><a href="contact.html"><span><small>04</small>Contact</span></a></li>
+                <!-- <li><a href="contact.html"><span><small>04</small>Contact</span></a></li> -->
               </ul>
             </div>
           </div>
@@ -114,8 +114,8 @@
                     <li><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">elson.li@berkeley.edu</a></p>
-                  <p>Phone: <a href="#">(415)-203-6973</a></p>
+                  <p>Email: <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
+                  <p>Phone: <a href="tel://4152036973">(415)-203-6973</a></p>
                 </div>
               </div>
             </div>
@@ -214,61 +214,20 @@
         </div>
       </section>
 
-      <section class="ftco-section ftco-counter" id="section-counter">
-        <div class="container">
-          <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
-              <h2>I love to share my achievements</h2>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-start">
-            <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-              <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">Clients</span>
-                  <strong class="number" data-number="420">0</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-              <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">Project done</span>
-                  <strong class="number" data-number="890">0</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-end">
-            <div class="col-md-5 counter-wrap ftco-animate">
-              <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">Cups of coffee</span>
-                  <strong class="number" data-number="1000">0</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="https://github.com/elsonli"><span class="icon-github></span></a></li>
+                  <li class="ftco-animate"><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
                   <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
                   <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
               </div>
             </div>
           </div>
