--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
-                <li><a href="contact.html"><span><small>04</small>Contact</span></a></li>
+                <!-- <li><a href="contact.html"><span><small>04</small>Contact</span></a></li> -->
               </ul>
             </div>
           </div>
@@ -87,8 +87,8 @@
                     <li><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">elson.li@berkeley.edu</a></p>
-                  <p>Phone: <a href="#">(415)-203-6973</a></p>
+                  <p>Email: <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
+                  <p>Phone: <a href="tel://4152036973">(415)-203-6973</a></p>
                 </div>
               </div>
             </div>
@@ -338,7 +338,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">elson.li@berkeley.edu</a></p>
+                <p class="h3 email"><a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
               </div>
             </div>
           </div>
