--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
-                <li class="active"><a href="contact.html"><span><small>04</small>Contact</span></a></li>
+                <!-- <li class="active"><a href="contact.html"><span><small>04</small>Contact</span></a></li> -->
               </ul>
             </div>
           </div>
@@ -68,7 +68,7 @@
         </div>
       </header>
 
-      <section class="ftco-section contact-section">
+      <!-- <section class="ftco-section contact-section">
         <div class="container mt-5">
           <div class="row d-flex mb-5 contact-info">
             <div class="col-md-12 mb-4">
@@ -76,21 +76,15 @@
             </div>
             <div class="w-100"></div>
             <div class="col-md-3">
-              <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+              <p><span>Phone:</span> <a href="tel://4152036973">(415)-203-6973</a></p>
             </div>
             <div class="col-md-3">
-              <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-            </div>
-            <div class="col-md-3">
-              <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-            </div>
-            <div class="col-md-3">
-              <p><span>Website:</span> <a href="#">yoursite.com</a></p>
+              <p><span>Email:</span> <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
             </div>
           </div>
           <div class="row block-9">
             <div class="col-md-6 pr-md-5">
-              <form action="#">
+              <form action="mailto:elson.li@berkeley.edu" method="post" enctype="text/plain">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Your Name">
                 </div>
@@ -112,7 +106,7 @@
             <div class="col-md-6" id="map"></div>
           </div>
         </div>
-      </section>
+      </section> -->
       
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
@@ -126,8 +120,8 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
               </div>
             </div>
           </div>
