--- a/index.html
+++ b/index.html
@@ -133,32 +133,36 @@
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://a-lull-in-the-museum.herokuapp.com/" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Illustration</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <h4 class="subheading">Full-Stack Application</h4>
+              <h2 class="heading"><a href="https://a-lull-in-the-museum.herokuapp.com/">A Lull in the Museum</a></h2>
+              <p>A single-page teamLab Borderless clone laced with DeviantArt features where users can explore, favorite, and comment on various artworks</p>
+              <p><a href="https://a-lull-in-the-museum.herokuapp.com/">Live Site</a></p>
+              <p><a href="https://github.com/elsonli/a-lull-in-the-museum">GitHub</a></p>
             </div>
           </div>
+
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://elsonli.github.io/wrapdis/" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <h4 class="subheading">JavaScript Game</h4>
+              <h2 class="heading"><a href="https://elsonli.github.io/wrapdis/">Wrapdis</a></h2>
+              <p>A fully interactive JavaScript and HTML5 Canvas game based on the classic tile-matching puzzle game Tetris</p>
+              <p><a href="https://elsonli.github.io/wrapdis/">Live Site</a></p>
+              <p><a href="https://github.com/elsonli/wrapdis">GitHub</a></p>
             </div>
           </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+          
+          <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
             <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
@@ -209,7 +213,7 @@
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
-          </div>
+          </div> -->
         </div>
         </div>
       </section>
