--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
               <h1 class="mb-4"><a href="index.html" class="logo">Elson Li</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="about.html"><span><small>02</small>Resume & Skills</span></a></li>
                 <li><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
                 <!-- <li class="active"><a href="contact.html"><span><small>04</small>Contact</span></a></li> -->
               </ul>
@@ -78,7 +78,7 @@
             </div>
             <div class="w-100"></div>
             <div class="col-md-3">
-              <p><span>Phone:</span> <a href="tel://4152036973">(415)-203-6973</a></p>
+              <p><span>Phone:</span> <a href="tel://4152036973">(415)203-6973</a></p>
             </div>
             <div class="col-md-3">
               <p><span>Email:</span> <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
