--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
               <h1 class="mb-4"><a href="index.html" class="logo">Elson Li</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="about.html"><span><small>02</small>Resume & Skills</span></a></li>
                 <li class="active"><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
                 <!-- <li><a href="contact.html"><span><small>04</small>Contact</span></a></li> -->
               </ul>
