Change resume link

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                   <h2 class="mb-5">Hi! I'm Elson Li</h2>
                   <p>I am a software engineer with a passion for Ruby on Rails, React, and Redux. With a creative side to me that I have
                   always enjoyed exploring, I'm happy that I am able to do that with software development.</p>
-                  <p><a href="https://docs.google.com/document/d/1Ivr5EuaUVZNEqiKZmIXCV2FKusGelnp1g4QtitYtt-A/edit?usp=sharing">Checkout my resume</a></p>
+                  <p><a href="Li_Elson_Resume.pdf">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
                     <li><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
@@ -90,7 +90,7 @@
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
-                  <p>Phone: <a href="tel://4152036973">(415)203-6973</a></p>
+                  <p>Phone: <a href="tel://4152036973">(415)&nbsp;203-6973</a></p>
                 </div>
               </div>
             </div>
@@ -105,12 +105,12 @@
 		          		<div class="col-md-6">
 		          			<p><strong>Name:</strong> <span>Elson Li</span></p>
 		          			<!-- <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p> -->
-		          			<p><strong>Phone:</strong> <span>(415)203-6973</span></p>
+		          			<p><strong>Phone:</strong> <span>(415)&nbsp;203-6973</span></p>
 		          		</div>
 		          		<!-- <div class="col-md-6"> -->
 		          			<!-- <p><strong>Name:</strong> <span>Elson Li</span></p> -->
 		          			<!-- <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p> -->
-		          			<!-- <p><strong>Phone:</strong> <span>(415)203-6973</span></p> -->
+		          			<!-- <p><strong>Phone:</strong> <span>(415)&nbsp;203-6973</span></p> -->
 		          		<!-- </div> -->
 	          		</div>
           		</div>
