--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
             </div>
             <div class="w-100"></div>
             <div class="col-md-3">
-              <p><span>Phone:</span> <a href="tel://4152036973">(415)203-6973</a></p>
+              <p><span>Phone:</span> <a href="tel://4152036973">(415)&nbsp;203-6973</a></p>
             </div>
             <div class="col-md-3">
               <p><span>Email:</span> <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
