--- a/index.html
+++ b/index.html
@@ -174,19 +174,15 @@
             </div>
           </div>
 
-          <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="https://github.com/elsonli/cpu-building" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}"></a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <h4 class="subheading">CPU Design</h4>
+              <h2 class="heading"><a href="https://github.com/elsonli/cpu-building">CPU Building</a></h2>
+              <p>A 32-bit CPU processor based on a subset of the RISC-V instruction set architecture</p>
+              <p><a href="https://github.com/elsonli/cpu-building">GitHub</a></p>
             </div>
-          </div> -->
+          </div>
 
           <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
             <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
