open tabs in a new page, fix typos

--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@
                   <h2 class="mb-5">Hi! I'm Elson Li</h2>
                   <p>I am a software engineer with a passion for Ruby on Rails, React, and Redux. With a creative side to me that I have
                   always enjoyed exploring, I'm happy that I am able to do that with software development.</p>
-                  <p><a href="Li_Elson_Resume.pdf">Checkout my resume</a></p>
+                  <p><a href="Li_Elson_Resume.pdf">Check out my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
-                    <li><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
-                    <li><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
+                    <li><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
+                    <li><a href="https://www.instagram.com/endingdusk" target="_blank"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
@@ -333,9 +333,9 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
+                  <li class="ftco-animate"><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk" target="_blank"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
