--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                   <h2 class="mb-5">Hi! I'm Elson Li</h2>
                   <p>I am a software engineer with a passion for Ruby on Rails, React, and Redux. With a creative side to me that I have
                   always enjoyed exploring, I'm happy that I am able to do that with software development.</p>
-                  <p><a href="Li_Elson_Resume.pdf">Checkout my resume</a></p>
+                  <p><a href="Li_Elson_Resume.pdf">Check out my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
-                    <li><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
-                    <li><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
+                    <li><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
+                    <li><a href="https://www.instagram.com/endingdusk" target="_blank"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:elson.li@berkeley.edu">elson.li@berkeley.edu</a></p>
@@ -130,7 +130,7 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+              <h2>Check out a few of my works</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -352,9 +352,9 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
+                  <li class="ftco-animate"><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk" target="_blank"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
