--- a/contact.html
+++ b/contact.html
@@ -116,9 +116,9 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
+                  <li class="ftco-animate"><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk" target="_blank"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
