--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+              <h2>Check out a few of my works</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -186,9 +186,9 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="https://github.com/elsonli"><span class="icon-github"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk"><span class="icon-instagram"></span></a></li>
+                  <li class="ftco-animate"><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.instagram.com/endingdusk" target="_blank"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
