Links open in a new tab, update work-2

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <h2 class="mb-5">Hi! I'm Elson Li</h2>
                   <p>I am a software engineer with a passion for Ruby on Rails, React, and Redux. With a creative side to me that I have
                   always enjoyed exploring, I'm happy that I am able to do that with software development.</p>
-                  <p><a href="Li_Elson_Resume.pdf">Check out my resume</a></p>
+                  <p><a href="Li_Elson_Resume.pdf" target="_blank">Check out my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://github.com/elsonli" target="_blank"><span class="icon-github"></span></a></li>
                     <li><a href="https://www.facebook.com/endingdusk" target="_blank"><span class="icon-facebook"></span></a></li>
